org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-06 (0.1.alpha6)

	- OntologyPanel:  Since "load registry file" is not implemented directly,
	  I removed the related GUI elements (via a flag, so I can return to that later
	  if necessary). Note: the user would use the main front-end to choose a
	  registered ontology, and then ontmd will be called to proceed 
	  with the creation of the new version.
	
	- Passing call parameters to the initialization (getBaseInfo) to better logging
	  on the server side.
	  
	- Now handling aquaportal versions: a parameter "ontologyId", if given, will be
	  used to perform the final REST upload call, so the new version gets linked with
	  the same family of versions for the given ontology.
	
	- Added authority: mvco: Martha's Vineyard Coastal Observatory
	- Main and BaseInfo: better handling of possible error while getting BaseInfo.
	
	- Fixed link to HTML version after upload. (it uses "?form=html" mechanism).
	
	
2008-11-05
	- Fixed Issue 25: Visiting ontology=>new without logging in does not require login.
	  In general, the logic to handle initialization is much clear now. 
	  See MainPanel() constructor.
	  
	- various GUI improvements.
	
2008-11-04 (0.1.alpha5)
	- Message improvements
	- Better integration with voc2rdf
	
	- Everything working pretty nicely! :-)
	
	TODO: Unify replicated code with voc2rdf !!
	
	
	
2008-11-03 (0.1.alpha4)

	- Assign omv:creationDate with format yyyy-MM-dd'T'HH:mm:ssZ
	
	- Fixed the following: repeated attributes will come out in the resulting ontology
	(eg, multiple omv:uri entries) when the original resource already contains those
	attributes. Now, any pre-exisiting attributes that are given new values are
	not tranferred from the original source, of course.
	
	- shortName attribute handled as a special case (time contrains force to take
	  quick, not-so-elegant solutions :( 
	
	- upload: setting file extension to .owl per aquaportal requirement
	