@@ -3,6 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-09 (0.1.alpha7)
+	- New tooltip handling via an "?" icon.
+
+
 2008-11-06 (0.1.alpha6)
 
 	- OntologyPanel:  Since "load registry file" is not implemented directly,
